syntax = "proto3";
option go_package = ".;node";

service NodeService {
    rpc CreateImage (CreateImageRequest) returns (CreateImageResponse);
    rpc CreateContainer (CreateContainerRequest) returns (CreateContainerResponse);
    rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
}

message CreateImageRequest {
    string Ref = 1;
}

message CreateImageResponse {

}

message CreateContainerRequest {
    string ImageRef = 1;
    string ContainerName = 2;
}

message CreateContainerResponse {
    string ContainerID = 1;
}

message CreateTaskRequest {
    string ContainerID = 1;
}

message CreateTaskResponse {
    
}